--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Parallax Template - Materialize</title>
@@ -9,17 +8,22 @@
   <!-- CSS  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+
 </head>
 <body>
-  <nav class="white" role="navigation">
+  <nav class="black" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <a id="logo-container" href="#" class="brand-logo"></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#contact">About</a></li>
+        <li><a href="#process">Process</a></li>
+        <li><a href="#applications">Applications</a></li>
+        <li><a href="#our_team">Our Team</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -29,93 +33,204 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
+        <h1 class="header center white-text text-lighten-2">Geospatial Data Science</h1>
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light white-text"><!-- Insights from satellite, radar, and ground based sensors --></h5>
         </div>
-        <div class="row center">
+<!--         <div class="row center">
           <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
-        </div>
+        </div> -->
         <br><br>
 
       </div>
     </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img id="earth_image" src="/assets/earf.png"></div>
   </div>
 
+  <div id = "process", class = 'section scrollspy'> 
+    <div class="container">
+      <div class="section">
 
-  <div class="container">
-    <div class="section">
+        <!--   Icon Section   -->
+        <div class="row">
+          <div class="col s12 m4">
+            <h5 class="center">Data</h5>
+            <div class="icon-block">
+              <h2 class="center brown-text"><i class="medium material-icons">satellite</i></h2>
+                <p class="light">We source commercial, academic, and government data from: </p>
+                <ol> Satellite images </ol>
+                <ol> Radars </ol>
+                <ol> Ground Based Sensors </ol>
+            </div>
+          </div>
 
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+          <div class="col s12 m4">
+            <h5 class="center">Analytics</h5>
+            <div class="icon-block">
+              <h2 class="center yellow-text"><i class="medium material-icons">wb_incandescent</i></h2>
+                <p class="light">Our experts apply cutting edge and tried and true techniques depending on the problem at hand, typically using</p>
+                <ol>Machine Learning</ol>
+                <ol>Statistical and Numerical Modeling</ol> 
+                <ol>Econometrics</ol>
+            </div>
+          </div>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+          <div class="col s12 m4">
+            <h5 class="center">Products</h5>
+            <div class="icon-block">
+              <h2 class="center green-text"><i class="medium material-icons">map </i></h2>
+                <p class="light">Cutom tailored solutions typically include:</p>
+                <ol>Forecasts</ol>
+                <ol>Software Tools</ol>
+                <ol>Models</ol>
+                <ol>Publications and Reports</ol>
+            </div>
           </div>
         </div>
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+      </div>
+    </div>
+  </div>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
-
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+  <div id = "applications" class = 'section scrollspy'>
+    <div class="parallax-container valign-wrapper">
+      <div class="section no-pad-bot">
+        <div class="container">
+          <div class="row center">
+            <h1 class="header center white-text text-lighten-2">Applications and Use Cases</h1>
           </div>
         </div>
       </div>
-
+      <div class="parallax"><img src="assets/flooding.jpg" alt="Unsplashed background img 2"></div>
     </div>
   </div>
 
+    <div class="container">
+      <div class="section">
+        <div class="row">
+          <div class="col s12 m6">
+            <h5 class="center">Disaster Response</h5>
+            <div class="icon-block">
+              <h2 class="center red-text"><i class="large material-icons">report_problem</i></h2>
+            </div>
+          </div>
 
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <div class="col s12 m6">
+            <h5 class="center">Precision Agriculture</h5>
+            <div class="icon-block">
+              <h2 class="center green-text"><i class="large material-icons">spa</i></h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col s12 m6">
+            <h5 class="center">Water, Sanitation, and Hygiene</h5>
+            <div class="icon-block">
+              <h2 class="center blue-text"><i class="large material-icons">whatshot </i></h2>
+            </div>
+          </div>
+          <div class="col s12 m6">
+            <h5 class="center">Urban Planning and Infrastructure Development</h5>
+            <div class="icon-block">
+              <h2 class="center grey-text"><i class="large material-icons">train</i></h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col s12 m6">
+            <h5 class="center">Agricultural Commodity Forecasts</h5>
+            <div class="icon-block">
+              <h2 class="center green-text"><i class="large material-icons">attach_money</i></h2>
+            </div>
+          </div>
+
+          <div class="col s12 m6">
+            <h5 class="center">Reinsurance and Climate Change Adaptation</h5>
+            <div class="icon-block">
+              <h2 class="center browmn-text"><i class="large material-icons">home</i></h2>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <div id = "our_team">
+    <div class="parallax-container grey">
+      <div class="section no-pad-bot">
+        <div class="container">
+          <h1 class="header center grey white-text text-lighten-2">Our Team</h1>
+          <div class="row center">
+            <h5 class="header col s12 light white-text">We are scientists and engineers affiliated with the following institutions</h5>
+            <div class="col s6">
+              <div class="icon-block">
+                  <h1 class = "center"></h1><div class="img"><img src="/assets/stanford.png" height = "100"></h1>
+              </div>
+              </div>
+          </div>
+
+          <div class="row center">
+            <div class="col s3">
+                <div class="icon-block">
+                    <h1 class = "center"><div class="img"><img src="/assets/nasa.png" height = "100"></div></h1>
+                </div>
+            </div>
+            <div class="row center">
+            <div class="col s3">
+                <div class="icon-block">
+                      <h1 class = "center"><div class="img"><img src="/assets/mit.png" height = "100"></div></h1>
+                </div>
+            </div>
+          </div>
+          <div class = "row center">
+            <div class="col s6">
+                <div class="icon-block">
+                      <div class = "over" ><!-- <div class="img"> --><img src="/assets/bc.png" height = "100"></div></div>
+                </div>
+            <div class="col s6">
+                <div class="icon-block">
+                      <div class = "over" ><!-- <div class="img"> --><img src="/assets/wwf.png" height = "100"></div></div>
+                </div>
+            </div>
+
+          </div>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
-  <div class="container">
-    <div class="section">
+  <div id = "contact" class = 'section scrollspy'> 
+    <div class="container">
+      <div class="section">
 
-      <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Us</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+        <div class="row">
+          <div class="col s12 center">
+            <h3><i class="mdi-content-send brown-text"></i></h3>
+            <h4>Contact Us</h4>
+            <div class="container">
+    <div class="row">
+        <div class="col m10 offset-m1 s12">
+            <div class="row">
+                <form action="https://formspree.io/ahamednasa@gmail.com" method="POST">
+                    <input type="text" name="name" placeholder = "Name">
+                    <input type="email" name="_replyto", placeholder = "Email">
+                    <input type="text" name="company" placeholder = "Company">
+                     <div class="input-field col s12">
+                        <textarea name="message" placeholder="Message" class="materialize-textarea"></textarea>
+                    </div>
+                    <button class="btn btn-large waves-effect waves-light" ><input type="submit" value="Send" ></input></button>
+                </form>
+            </div>
         </div>
-      </div>
-
     </div>
-  </div>
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+</div>
+          </div>  
         </div>
+
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer teal">
@@ -123,7 +238,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <p class="grey-text text-lighten-4">Footer</p>
 
 
         </div>
@@ -157,8 +272,7 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
 
   </body>
 </html>
