mobile responsive imgs

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <div class="icon-block">
               <h2 class="center brown-text"><i class="medium material-icons">satellite</i></h2>
                 <p class="light">We source commercial, academic, and government data from: </p>
-                <ol> Satellite images </ol>
-                <ol> Radars </ol>
-                <ol> Ground Based Sensors </ol>
+                <ol> Optical Satellites </ol>
+                <ol> Radar Satellites </ol>
+                <ol> Air and Ground Based Sensors </ol>
             </div>
           </div>
 
@@ -157,50 +157,31 @@
       </div>
     </div>
   </div>
-  <div id = "our_team">
-    <div class="parallax-container grey">
-      <div class="section no-pad-bot">
-        <div class="container">
-          <h1 class="header center grey white-text text-lighten-2">Our Team</h1>
-          <div class="row center">
-            <h5 class="header col s12 light white-text">We are scientists and engineers affiliated with the following institutions</h5>
-            <div class="col s6">
-              <div class="icon-block">
-                  <h1 class = "center"></h1><div class="img"><img src="/assets/stanford.png" height = "100"></h1>
-              </div>
-              </div>
-          </div>
-
-          <div class="row center">
-            <div class="col s3">
-                <div class="icon-block">
-                    <h1 class = "center"><div class="img"><img src="/assets/nasa.png" height = "100"></div></h1>
-                </div>
-            </div>
+  <div id = "our_team" class = 'section scrollspy'>
+    <div class = "section">
+      <div class="parallax-container grey">
+        <div class="section no-pad-bot">
+          <div class="container">
+            <h1 class="header center grey white-text text-lighten-2">Our Team</h1>
             <div class="row center">
-            <div class="col s3">
-                <div class="icon-block">
-                      <h1 class = "center"><div class="img"><img src="/assets/mit.png" height = "100"></div></h1>
-                </div>
+              <h5 class="header col s12 light white-text">We are scientists and engineers affiliated with the following institutions</h5>
             </div>
           </div>
-          <div class = "row center">
-            <div class="col s6">
-                <div class="icon-block">
-                      <div class = "over" ><!-- <div class="img"> --><img src="/assets/bc.png" height = "100"></div></div>
-                </div>
-            <div class="col s6">
-                <div class="icon-block">
-                      <div class = "over" ><!-- <div class="img"> --><img src="/assets/wwf.png" height = "100"></div></div>
-                </div>
-            </div>
-
+       <div class="section">
+        <div class="row">
+          <div class="col center s12 m4" class = 'responsive-img'>
+              <img src="assets/stanford.png" height="100">
           </div>
-        </div>
+            <div class="col center s12 m4" class = 'responsive-img'>
+              <img src="assets/nasa.png" height="100">
+             </div>
+            <div class="col center s12 m4" class = 'responsive-img'>
+              <img src="assets/mit.png" height="100">
+            </div>
       </div>
     </div>
   </div>
-
+</div>
   <div id = "contact" class = 'section scrollspy'> 
     <div class="container">
       <div class="section">
@@ -226,12 +207,6 @@
         </div>
     </div>
 </div>
-          </div>  
-        </div>
-
-      </div>
-    </div>
-  </div>
 
   <footer class="page-footer teal">
     <div class="container">
